@@ -1,3 +1,9 @@
+Version 2016052701 
++ Allow specifying how you want display characters which aren't printable
+  ASCII characters. It used to be displayed as hex escapes. We know also
+  allow named escapes, "as is", \n/\r/\t only or "only escape non-printable
+  ASCII", which is the new default.
+
 Version 2015110201 Mon Nov  2 21:34:52 CET 2015
 + Removed a my() inside a my(). This is a new failure in 5.23.*
 + Eliminate the use of given
